# GroceryStore

./: .dockerignore  .gitignore  CNAME  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: db.sqlite3
app/api/: router.py
app/api/services/: router.py  views.py
app/app/: settings.py  urls.py
app/cart/: cart.py  forms.py  urls.py  views.py
app/cart/api/: router_params.py  routers.py  views.py
app/cart/services/: messages.py  views.py
app/orders/: admin.py  forms.py  models.py  urls.py  views.py
app/orders/api/: routers.py  serializers.py  views.py
app/orders/migrations/: 0001_initial.py  0002_initial.py  0003_order_created_at_order_price_orderitem_price_and_more.py  0004_alter_order_created_at_alter_orderitem_price.py  0005_alter_order_price.py  0006_orderitem_new_price_orderitem_old_price.py  0007_rename_new_price_orderitem_discount_price_and_more.py  0008_alter_orderitem_product.py
app/orders/services/: messages.py  views.py
app/store/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
app/store/api/: routers.py  serializers.py  views.py
app/store/migrations/: 0001_initial.py  0002_alter_product_packing_date_alter_product_sell_before.py  0002_alter_productbatch_packing_date_and_more.py  0002_category_height_category_width_alter_category_photo_and_more.py  0002_producer_id_alter_producer_name_and_more.py  (+20 more)
app/user/: admin.py  forms.py  urls.py  views.py
grocerystore/: db.sqlite3
grocerystore/api/: router.py
grocerystore/grocerystore/: asgi.py  config.py  settings.py  urls.py  views.py  wsgi.py
(+87 files in other folders)
